--- a/api-page/index.html
+++ b/api-page/index.html
@@ -15,7 +15,7 @@
             <div class="spinner-border text-dark mb-2" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-            <p>Waitt...</p>
+            <p>loading Ntando mods🐞🇿🇼🐞...</p>
         </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light">
